# fs25_vehicle_sorter

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  model.py  order_notifier.py  pyproject.toml  vehicle_xml.py
.github/workflows/: build-macos.yml  build-windows.yml  lint.yml
src/fs25_vehicle_sorter/: main.py  model.py  vehicle_xml.py
