[project]
name = "fs25-vehicle-sorter"
version = "0.1.0"
description = "Farming Simulator 2025 Vehicle Sorter"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["farming-simulator", "fs25", "vehicle", "savegame"]
dependencies = [
    "FreeSimpleGUI~=5.2.0",
]

[dependency-groups]
dev = [
    "pyinstaller~=6.16.0",
    "ruff~=0.8.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
